--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@ Make Clear() clear everything using isBlank
 ? Does close search need a wait timer
 
 * Totalpieces don't always delete the number already in the field
+* Convert shipper() over to using controls instead of select
